sass/4-components/_forms.scss
/* ... */
option{
  @extend .a-option;
}

textarea{
  @extend .a-input;
  @include rem(padding-top, 16px);
  @include rem(padding-bottom, 16px);
  font-family: $font;
  + label {
    font-family: $font;
  }
}

input[type="submit"]{

}

button{
  cursor:pointer;
}


h2 + form {
  margin-top: 23px;
}

.page-template-location {
  form {
    .wp-block-columns {

      @media screen and (min-width: 600px) {
        &.wp-block-columns--spaced  {
          margin-top: 20px;
        }
      }
    }
  }
}


form.newsletter-form {
  position: relative;
  max-width: 85%;

  p.email-wrap {
    max-width: unset !important;
    input {
      min-width: unset;
      padding: 0.75rem 2.5rem 0.75rem 1rem;
      &:placeholder-shown:not(:focus)::placeholder {
        opacity: 1;
        color: $black-two;
      }
    }
  }

  p.submit-wrap {
    max-width: unset !important;
    position: absolute;
    right: 0;
    top: 0;
    margin-top: 0;
    margin-bottom: 0;
    input {
      @include size(58px, 41px);
      text-indent: 58px;
      min-width: unset;
      overflow: hidden;
      padding: 0;
      border-radius: 0 25px 25px 0;
      background: _url('letter.svg') no-repeat center center;
      background-size: 16px;
      cursor: pointer;
      border: 0;
    }
  }

  p.consent {
    max-width: unset !important;
    margin-top: 0.75rem;
    font-size: 0.75rem;
    line-height: 1.4;
    label {
      display: flex;
      gap: 0.5rem;
      align-items: flex-start;
      cursor: pointer;
      max-width: unset;
    }
    input[type="checkbox"] {
      flex-shrink: 0;
      margin-top: 0.15rem;
      min-width: unset;
      width: auto;
    }
  }

  p.newsletter-honeypot {
    position: absolute;
    left: -9999px;
    width: 1px;
    height: 1px;
    overflow: hidden;
  }

  p.newsletter-message {
    max-width: unset !important;
    margin-top: 0.5rem;
    font-size: 0.875rem;
    min-height: 1.2em;
    &.error {
      color: #d32f2f;
    }
  }

  @media #{$tab2} {
    max-width: unset;

    p.email-wrap {
      min-width: 230px;
      input {
        border-radius: 34px;
        min-height: 54px;
      }
    }

    p.submit-wrap {
      width: 74px;
      min-width: unset;
      right: -40px;
      input {
        @include size(74px, 54px);
        text-indent: 74px;
        background-size: 26px;
      }
    }
  }

  @media #{$desk} {
    p.email-wrap {
      min-width: unset;
    }
    p.submit-wrap {
      right: 0;
    }
  }

  @media #{$extend} {
    p.email-wrap input {
      border-radius: 46px;
      min-height: 74px;
    }
    p.submit-wrap {
      width: auto;
      input {
        @include size(94px, 74px);
        text-indent: 94px;
        background-size: 36px;
      }
    }
  }

  @media #{$extend2} {
    p.email-wrap {
      width: 348px;
    }
    p.submit-wrap {
      width: 94px;
    }
  }
}

